chore: fix icon alignment inside button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -241,7 +241,6 @@ strong a img {
   position: relative;
   height: 24px;
   left: -6px;
-  margin-top: 4px;
   float: left;
 }
 
